# GCS

./: .env.example  .gitignore  CODE_REVIEW.md  README.md  REUSE.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
examples/: README.md  basic_usage.py
src/gcs_utilities/: __init__.py  client.py  exceptions.py  py.typed
tests/: __init__.py  test_client.py
